--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,12 @@ body {
     background: rgba(0,0,0,.05);
 }
 
+.footer-container {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
 /* ==============
     MOBILE: Menu
    ============== */
