set up sass variables/mixins to match StyleSheet

--- a/client/src/sass/index.scss
+++ b/client/src/sass/index.scss
@@ -1,5 +1,8 @@
 // Import components, themes, etc. here.
 // @import('./ComponentName/_index')
+@import './_themes';
+@import './_fonts';
+@import './components/index';
 
 body {
     margin: 0px;
