added logo with a bootstrap navbar

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -1,3 +1,11 @@
 body {
   margin: 0px;
-  padding: 0px; }
+  padding: 0px;
+}
+
+.navbar-default {
+  background-image: none;
+  box-shadow: none;
+  background: none;
+  border: none;
+}
