--- a/client/src/sass/index.scss
+++ b/client/src/sass/index.scss
@@ -1,10 +1,10 @@
 // Import components, themes, etc. here.
 // @import('./ComponentName/_index')
-@import './_themes';
-@import './_fonts';
-@import './components/index';
+@import "./_themes";
+@import "./_fonts";
+@import "./components/index";
 
 body {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
