added sass styling for tiles

--- a/client/src/sass/_fonts.sass
+++ b/client/src/sass/_fonts.sass
@@ -20,6 +20,7 @@ h2
 
 .text-label
   +textedit('Lato', 0.875em, 1.125em, 600)
+  text-align: center
 
 .text-form
   +textedit('Lato', 1em, 1.25em, 400)
