--- a/client/src/sass/components/_Tile.sass
+++ b/client/src/sass/components/_Tile.sass
@@ -1,4 +1,11 @@
 .tile
   border-radius: 10px
   background: url('https://github.com/hackforla/spare/blob/master/design/assets/tiles/dress.png')
+  text-align: center
 
+.tile-label
+  position: absolute
+  top: 25%
+  left: 50%
+  transform: translate(-50%, -25%)
+  
