--- a/client/src/css/components/index.css
+++ b/client/src/css/components/index.css
@@ -1,3 +1,10 @@
 .tile {
   border-radius: 10px;
-  background: url("https://github.com/hackforla/spare/blob/master/design/assets/tiles/dress.png"); }
+  background: url("https://github.com/hackforla/spare/blob/master/design/assets/tiles/dress.png");
+  text-align: center; }
+
+.tile-label {
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, -25%); }
