--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -46,12 +46,4 @@ h2 {
 
 body {
   margin: 0px;
-  padding: 0px;
-}
-
-.navbar-default {
-  background-image: none;
-  box-shadow: none;
-  background: none;
-  border: none;
-}
+  padding: 0px; }
