--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -36,7 +36,8 @@ h2 {
 .tile {
   border-radius: 10px;
   background: url("https://github.com/hackforla/spare/blob/master/design/assets/tiles/dress.png");
-  text-align: center; }
+  text-align: center;
+  cursor: pointer; }
 
 .tile-label {
   position: absolute;
