--- a/client/src/sass/components/_Tile.sass
+++ b/client/src/sass/components/_Tile.sass
@@ -2,6 +2,7 @@
   border-radius: 10px
   background: url('https://github.com/hackforla/spare/blob/master/design/assets/tiles/dress.png')
   text-align: center
+  cursor: pointer
 
 .tile-label
   position: absolute
