--- a/client/src/sass/_fonts.sass
+++ b/client/src/sass/_fonts.sass
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
 @font-face
   font-family: 'Lato'
   src: url('https://fonts.googleapis.com/css?family=Lato')
@@ -8,12 +10,13 @@
   line-height: $height
   font-weight: $weight
 
-  
+
 h1
   +textedit('Lato', 1.875em, 2.8125em, 600)
 
 h2
-  +textedit('Lato', 1.375em, 1.75em, 400)
+  +textedit('Lato', 30px, 50px, 700)
+  margin-bottom: 75px;
 
 .text-label-small
   +textedit('Lato', 1em, 1.25em, 400)
