--- a/client/src/sass/_themes.sass
+++ b/client/src/sass/_themes.sass
@@ -1,3 +1,2 @@
-$primary-color: #253673
-$secondary-color: #495366
-$form-color: #9A9A9A
+$donate-primary-color: #253673;
+$request-primary-color: #A13604;
