--- a/client/src/sass/components/_Donate.sass
+++ b/client/src/sass/components/_Donate.sass
@@ -1,2 +1,9 @@
 #donate-container
   h2
+
+  form .btn
+    color: white
+    background: $donate-primary-color
+
+    &:hover
+      background: darken($donate-primary-color, 5%)
