--- a/client/src/sass/components/_Request.sass
+++ b/client/src/sass/components/_Request.sass
@@ -3,3 +3,10 @@
 
   h2
     color: $request-primary-color
+
+  form .btn
+    color: white
+    background: $request-primary-color
+
+    &:hover
+      background: darken($request-primary-color, 5%)
