--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -123,9 +123,16 @@ h2 {
 
 .tile-label {
   position: absolute;
-  top: 25%;
-  left: 50%;
-  transform: translate(-50%, -25%); }
+  transform: translate(-60px, -70px);
+  right: 0;
+  bottom: 0;
+  background-color: #ff0050;
+  color: #eee;
+  font-size: 1em;
+  font-weight: bold;
+  padding: 5px 8px;
+  box-shadow: 2px 2px 6px rgba(10, 10, 10, 0.1);
+  border: 1px solid #e60048; }
 
 .text-label {
   padding: 10px 0 30px; }
