--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -163,6 +163,14 @@ form {
 #About {
   text-align: center; }
 
+#Footer {
+  position: absolute;
+  bottom: 0;
+  width: 94%;
+  height: 60px;
+  margin-bottom: 5px;
+  text-align: center; }
+
 body {
   margin: 0px 50px 85px;
   padding: 0px;
