--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -164,18 +164,42 @@ form {
   text-align: center; }
 
 #Footer {
+  width: 100%;
   height: 60px;
+  line-height: 50px;
   margin-bottom: 5px;
   text-align: center; }
+  #Footer ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0; }
+    #Footer ul li {
+      display: inline;
+      font-weight: bold;
+      text-transform: uppercase; }
+      #Footer ul li a:active, #Footer ul li a:focus {
+        outline: none;
+        text-decoration: none; }
+    #Footer ul li + li {
+      margin-left: 37.5px; }
 
-html, #root {
+html {
   height: 100%; }
 
 body {
-  height: 100%;
-  margin: 0px 50px 85px;
+  min-height: 100%;
+  margin: 0px 50px 0px;
   padding: 0px;
-  color: #4f5464; }
+  color: #4f5464;
+  display: flex; }
+
+#root {
+  flex: 1;
+  display: flex;
+  flex-direction: column; }
+
+#root > .container-fluid {
+  flex-grow: 1; }
 
 a {
   color: #4f5464; }
