--- a/client/src/sass/components/_Footer.sass
+++ b/client/src/sass/components/_Footer.sass
@@ -1,5 +1,23 @@
 #Footer
-    height: 60px
-    margin-bottom: 5px
-    text-align: center
+  width: 100%
+  height: 60px
+  line-height: 50px
+  margin-bottom: 5px
+  text-align: center
 
+  ul
+    list-style-type: none
+    padding: 0
+    margin: 0
+
+    li
+      display: inline
+      font-weight: bold
+      text-transform: uppercase
+
+      a:active, a:focus
+        outline: none
+        text-decoration: none
+
+    li+li
+      margin-left: 37.5px
