--- a/client/src/sass/index.scss
+++ b/client/src/sass/index.scss
@@ -6,15 +6,26 @@
 @import "./_layout";
 @import "./components/index";
 
-html, #root {
-    height: 100%;
+html {
+  height: 100%;
 }
 
 body {
-  height: 100%;
-  margin: 0px 50px 85px;
+  min-height: 100%;
+  margin: 0px 50px 0px;
   padding: 0px;
   color: $text-color;
+  display: flex;
+}
+
+#root {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+#root > .container-fluid {
+  flex-grow: 1;
 }
 
 a {
