Added request confirmation screen

--- a/client/src/sass/components/_index.scss
+++ b/client/src/sass/components/_index.scss
@@ -2,6 +2,7 @@
 @import './_Header';
 @import './_Nav';
 @import './_Request';
+@import './_RequestConfirmation';
 @import './_Tile';
 @import './_Form';
 @import './_About';
