--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -69,8 +69,8 @@ h2 {
       border-color: #253673;
       color: #253673; }
     .header .flip-button.to-donate {
-      border-color: #874b21;
-      color: #874b21; }
+      border-color: #A13604;
+      color: #A13604; }
 
 .nav-pills {
   margin-bottom: 25px; }
@@ -95,21 +95,42 @@ h2 {
     background-color: #253673; }
 
 #request-container .nav-pills li.active a {
-  border: 1px solid #874b21;
-  background-color: #874b21;
+  border: 1px solid #A13604;
+  background-color: #A13604;
   color: white; }
   #request-container .nav-pills li.active a:hover {
-    background-color: #874b21; }
+    background-color: #A13604; }
 
 #request-container {
-  color: #874b21; }
+  color: #A13604; }
   #request-container h2 {
-    color: #874b21; }
+    color: #A13604; }
   #request-container form .btn {
     color: white;
-    background: #874b21; }
+    background: #A13604; }
     #request-container form .btn:hover {
-      background: #73401c; }
+      background: #882e03; }
+
+.request-confirmation .container {
+  width: 510px; }
+  .request-confirmation .container ol {
+    counter-reset: next-steps; }
+    .request-confirmation .container ol > li {
+      display: flex;
+      list-style: none;
+      margin-bottom: 70px;
+      font-size: 18px; }
+      .request-confirmation .container ol > li img {
+        margin-right: 20px; }
+      .request-confirmation .container ol > li div.step-text {
+        display: inline-block; }
+        .request-confirmation .container ol > li div.step-text:before {
+          content: counter(next-steps) ") ";
+          counter-increment: next-steps; }
+        .request-confirmation .container ol > li div.step-text .disclaimer {
+          display: block;
+          font-size: 14px;
+          font-style: italic; }
 
 .tile {
   text-align: center;
