Style about page, automatically load images

--- a/client/src/sass/_fonts.sass
+++ b/client/src/sass/_fonts.sass
@@ -12,7 +12,10 @@ h1
   +textedit(1.875em, 2.8125em, 700)
 
 h2
-  +textedit(30px, 50px, 700)
+  +textedit(30px, 45px, 700)
+
+p, li
+  +textedit(18px, 20px, 400)
 
 .text-label-small
   +textedit(1em, 1.25em, 400)
@@ -26,3 +29,7 @@ h2
 
 .hero
   +textedit(1.5em, 1.25em, 400)
+
+
+a
+  text-decoration: underline
