--- a/client/src/sass/components/_About.sass
+++ b/client/src/sass/components/_About.sass
@@ -1,2 +1,17 @@
 #About
+
+  h2
     text-align: center
+
+  p
+    margin-bottom: 1.5em
+
+  div#team-thumbnails
+    margin-top: 10px
+    display: flex
+    justify-content: center
+
+    img
+      border: none
+    img + img
+      margin-left: 20px
