--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -9,8 +9,13 @@ h1 {
 
 h2 {
   font-size: 30px;
-  line-height: 50px;
+  line-height: 45px;
   font-weight: 700; }
+
+p, li {
+  font-size: 18px;
+  line-height: 20px;
+  font-weight: 400; }
 
 .text-label-small {
   font-size: 1em;
@@ -33,8 +38,17 @@ h2 {
   line-height: 1.25em;
   font-weight: 400; }
 
+a {
+  text-decoration: underline; }
+
 .hero {
   margin-bottom: 50px; }
+
+.main-container {
+  display: flex;
+  justify-content: center; }
+  .main-container > .container {
+    max-width: 800px; }
 
 #donate-container form .btn {
   color: white;
@@ -72,10 +86,16 @@ h2 {
       border-color: #A13604;
       color: #A13604; }
 
+.nav-container {
+  display: flex;
+  justify-content: center; }
+
 .nav-pills {
+  display: inline-block;
+  width: 75%;
+  margin-left: 55px;
   margin-bottom: 25px; }
   .nav-pills li a {
-    margin-left: calc(50% - (146px /2));
     height: 35px;
     width: 146px;
     border-radius: 17.5px;
@@ -87,12 +107,18 @@ h2 {
   .nav-pills li.active a:hover {
     cursor: default; }
 
+#donate-container .nav-pills li a {
+  color: #253673; }
+
 #donate-container .nav-pills li.active a {
   border: 1px solid #253673;
   background-color: #253673;
   color: white; }
   #donate-container .nav-pills li.active a:hover {
     background-color: #253673; }
+
+#request-container .nav-pills li a {
+  color: #A13604; }
 
 #request-container .nav-pills li.active a {
   border: 1px solid #A13604;
@@ -118,8 +144,7 @@ h2 {
     .request-confirmation .container ol > li {
       display: flex;
       list-style: none;
-      margin-bottom: 70px;
-      font-size: 18px; }
+      margin-bottom: 70px; }
       .request-confirmation .container ol > li img {
         margin-right: 20px; }
       .request-confirmation .container ol > li div.step-text {
@@ -181,8 +206,20 @@ form {
     letter-spacing: 2.54px;
     text-transform: uppercase; }
 
-#About {
+#About h2 {
   text-align: center; }
+
+#About p {
+  margin-bottom: 1.5em; }
+
+#About div#team-thumbnails {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center; }
+  #About div#team-thumbnails img {
+    border: none; }
+  #About div#team-thumbnails img + img {
+    margin-left: 20px; }
 
 #Footer {
   width: 100%;
@@ -198,7 +235,7 @@ form {
       display: inline;
       font-weight: bold;
       text-transform: uppercase; }
-      #Footer ul li a:active, #Footer ul li a:focus {
+      #Footer ul li a, #Footer ul li a:active, #Footer ul li a:focus {
         outline: none;
         text-decoration: none; }
     #Footer ul li + li {
