--- a/client/src/sass/components/_Footer.sass
+++ b/client/src/sass/components/_Footer.sass
@@ -1,4 +1,5 @@
 #Footer
+
   width: 100%
   height: 60px
   line-height: 50px
@@ -15,7 +16,7 @@
       font-weight: bold
       text-transform: uppercase
 
-      a:active, a:focus
+      a, a:active, a:focus
         outline: none
         text-decoration: none
 
