Updated hover state on Request btns

--- a/client/src/sass/components/_Request.sass
+++ b/client/src/sass/components/_Request.sass
@@ -9,4 +9,7 @@
     background: $request-primary-color
 
     &:hover
-      background: darken($request-primary-color, 5%)
+      background: white
+      border-color: $request-primary-color
+      color: $request-primary-color
+      
