Updated hover state on Donate btns

--- a/client/src/sass/components/_Donate.sass
+++ b/client/src/sass/components/_Donate.sass
@@ -6,4 +6,6 @@
     background: $donate-primary-color
 
     &:hover
-      background: darken($donate-primary-color, 5%)
+      background: white
+      border-color: $donate-primary-color
+      color: $donate-primary-color
