--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -161,15 +161,38 @@ a {
           font-size: 14px;
           font-style: italic; }
 
+.tile-container {
+  text-align: center; }
+
 .tile {
-  text-align: center;
-  box-sizing: border-box; }
+  position: relative;
+  box-sizing: border-box;
+  width: 160px;
+  height: 160px;
+  margin: 0 auto; }
 
 .tile img {
   border-radius: 10px; }
 
 .tile:hover img {
   box-shadow: 0 0 10px rgba(10, 10, 10, 0.25); }
+
+.tile-hover-text {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #fff;
+  line-height: 160px;
+  display: none;
+  background-color: rgba(37, 54, 115, 0.75); }
+
+.tile-container a:hover .tile-hover-text {
+  display: block; }
 
 .tile-label {
   position: absolute;
