--- a/client/src/sass/components/_Tile.sass
+++ b/client/src/sass/components/_Tile.sass
@@ -1,12 +1,35 @@
-.tile
+.tile-container
   text-align: center
+
+.tile
+  position: relative
   box-sizing: border-box
+  width: 160px
+  height: 160px
+  margin: 0 auto
 
 .tile img
   border-radius: 10px
 
 .tile:hover img
   box-shadow: 0 0 10px rgba(10, 10, 10, 0.25)
+
+.tile-hover-text
+  position: absolute
+  left: 0
+  top: 0
+  width: 100%
+  height: 100%
+  border-radius: 10px
+  font-size: 1.2em
+  font-weight: bold
+  color: #fff
+  line-height: 160px
+  display: none
+  background-color: rgba(37,54,115,0.75)
+
+.tile-container a:hover .tile-hover-text
+  display: block
 
 .tile-label
   position: absolute
