--- a/client/src/sass/components/_About.sass
+++ b/client/src/sass/components/_About.sass
@@ -1,17 +1,10 @@
 #About
 
-  h2
-    text-align: center
+h2
+  text-align: center
 
-  p
-    margin-bottom: 1.5em
+p
+  margin-bottom: 1.5em
 
-  div#team-thumbnails
-    margin-top: 10px
-    display: flex
-    justify-content: center
-
-    img
-      border: none
-    img + img
-      margin-left: 20px
+.team-thumbnail
+  margin-bottom: 2em
