--- a/client/src/sass/components/_Header.sass
+++ b/client/src/sass/components/_Header.sass
@@ -32,7 +32,16 @@
       border-color: $donate-primary-color
       color: $donate-primary-color
 
+      &:hover
+        background-color: $donate-primary-color
+        color: white
+        box-shadow: 0 0 10px rgba(10, 10, 10, 0.25)
+
     &.to-donate
       border-color: $request-primary-color
       color: $request-primary-color
 
+      &:hover
+        background-color: $request-primary-color
+        color: white
+        box-shadow: 0 0 10px rgba(10, 10, 10, 0.25)
