Add formatting to table

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -273,6 +273,28 @@ p {
     #Footer ul li + li {
       margin-left: 37.5px; }
 
+table {
+  font-size: 14px;
+  width: 85% !important;
+  margin-right: auto;
+  margin-left: auto; }
+  table td, table th {
+    padding: 1.5em !important; }
+
+th {
+  line-height: 2em;
+  letter-spacing: 2px;
+  font-weight: bold;
+  text-transform: uppercase; }
+
+table .btn {
+  border-radius: 17.5px;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  line-height: 13.5px;
+  text-transform: uppercase; }
+
 html {
   height: 100%; }
 
