Make body margin responsive

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -300,10 +300,14 @@ html {
 
 body {
   min-height: 100%;
-  margin: 0px 50px 0px;
   padding: 0px;
   color: #4f5464;
-  display: flex; }
+  display: flex;
+  margin: 0 10px 0;
+  /* Extra Small Devices, Phones */ }
+  @media only screen and (min-width: 480px) {
+    body {
+      margin: 0px 50px 0px; } }
 
 #root {
   flex: 1;
