Add some temporary responsive styles for tables

--- a/client/src/sass/components/_Table.sass
+++ b/client/src/sass/components/_Table.sass
@@ -20,3 +20,9 @@ table .btn
   letter-spacing: 2px
   line-height: 13.5px
   text-transform: uppercase
+
+
+.table-requests-mobile
+  & .btn
+    width: 100%
+    line-height: 2em
