--- a/client/src/sass/components/_Header.sass
+++ b/client/src/sass/components/_Header.sass
@@ -2,7 +2,58 @@
   border-bottom: none
   margin: 10px 0 0 0
 
-  @media (min-width : 768px)
+  text-align: center
+
+  .request-text
+    color: $request-primary-color !important
+
+    a
+      color: inherit
+      text-decoration: none
+
+      &:hover
+        color: darken($request-primary-color, 10%)
+
+  .donate-text
+    color: $donate-primary-color
+
+    a
+      color: inherit
+      text-decoration: none
+
+      &:hover
+        color: darken($donate-primary-color, 10%)
+
+  @media (min-width: 768px)
+    text-align: initial
+    h1
+      display: flex
+      flex-direction: row
+      justify-content: space-between
+
+  .breadcrumb
+    text-transform: uppercase
+    font-weight: bold
+    letter-spacing: 2px
+    line-height: 2em
+
+    .active
+      color: inherit
+
+    li
+      font-weight: none
+      font-size: 16px
+      color: inherit
+
+      &:last-child
+        font-weight: bold
+
+    li + li:before
+      font-weight: normal
+      content: '>'
+      color: inherit
+
+  @media (min-width: 768px)
     margin: 10px 0 20px 40px
 
   .logo
@@ -11,10 +62,13 @@
     display: block
     margin: 5px auto
 
-    @media (min-width : 768px)
+    @media (min-width: 768px)
       width: 160px
       display: inline-block
       margin: 5px
+
+  .breadcrumb
+    background: none
 
   .flip-button
     height: 52px
@@ -22,7 +76,7 @@
     display: block
     margin: 25px auto 0
 
-    @media (min-width : 768px)
+    @media (min-width: 768px)
       float: right
       display: inline-block
       position: relative
