--- a/client/src/sass/components/_Footer.sass
+++ b/client/src/sass/components/_Footer.sass
@@ -1,9 +1,8 @@
 #Footer
-
-  width: 100%
   height: 60px
   line-height: 50px
-  margin-bottom: 5px
+  margin-top: 30px
+  margin-bottom: 40px
   text-align: center
 
   ul
@@ -14,6 +13,8 @@
     li
       display: inline
       font-weight: bold
+      font-size: 15px
+      letter-spacing: 2px
       text-transform: uppercase
 
       a, a:active, a:focus
