--- a/client/src/sass/components/_Header.sass
+++ b/client/src/sass/components/_Header.sass
@@ -2,6 +2,9 @@
   border-bottom: none
   margin: 10px 0 0 0
 
+  a
+    text-decoration: none
+
   text-align: center
 
   .request-text
@@ -9,7 +12,6 @@
 
     a
       color: inherit
-      text-decoration: none
 
       &:hover
         color: darken($request-primary-color, 10%)
@@ -19,7 +21,6 @@
 
     a
       color: inherit
-      text-decoration: none
 
       &:hover
         color: darken($donate-primary-color, 10%)
