Clean up table styles

--- a/client/src/sass/components/_Table.sass
+++ b/client/src/sass/components/_Table.sass
@@ -26,6 +26,15 @@ table .btn
 
 
 .table-requests-mobile
+  tr:first-child td
+    border-top: 0
+
   & .btn
     width: 100%
     line-height: 2em
+
+  .table-requests-mobile-header
+    line-height: 2em
+    letter-spacing: 2px
+    font-weight: bold
+    text-transform: uppercase
