Add styles and dismiss to alerts

--- a/client/src/sass/_layout.sass
+++ b/client/src/sass/_layout.sass
@@ -6,3 +6,9 @@
   justify-content: center
   & > .container
     max-width: 800px
+
+.alert
+  position: fixed
+  top: 5%
+  left: 50%
+  transform: translateX(-50%);
