Add dimensions for smaller donate images

--- a/client/src/sass/components/_Tile.sass
+++ b/client/src/sass/components/_Tile.sass
@@ -4,11 +4,23 @@
   a
     text-decoration: none
 
+#donate-container
+  .tile
+    width: 112px
+    height: 112px
+  .tile-hover-text
+    line-height: 112px
+
+#request-container
+  .tile
+    width: 160px
+    height: 160px
+  .tile-hover-text
+    line-height: 160px
+
 .tile
   position: relative
   box-sizing: border-box
-  width: 160px
-  height: 160px
   margin: 0 auto
 
 .tile img
@@ -27,7 +39,6 @@
   font-size: 1.2em
   font-weight: bold
   color: #fff
-  line-height: 160px
   display: none
   background-color: rgba(37,54,115,0.75)
 
