Refactor request form

--- a/client/src/sass/components/_Form.sass
+++ b/client/src/sass/components/_Form.sass
@@ -22,7 +22,7 @@ form
     box-sizing: border-box
     padding: 0 50px
     font-size: 14px
-    font-weight: normal
+    font-weight: bold
     letter-spacing: 2.54px
     text-transform: uppercase
 
