Footer and form fixes

--- a/client/src/sass/_layout.sass
+++ b/client/src/sass/_layout.sass
@@ -11,4 +11,10 @@
   position: fixed
   top: 5%
   left: 50%
-  transform: translateX(-50%);
+  transform: translateX(-50%)
+  width: 500px
+  max-width: 90%
+  box-shadow: 2px 2px 6px rgba(10, 10, 10, 0.1)
+  border-width: 2px
+  p
+    line-height: 1.5em
