--- a/client/src/sass/components/_Header.sass
+++ b/client/src/sass/components/_Header.sass
@@ -4,7 +4,7 @@
   text-align: center
 
   h1
-    margin: 15px auto
+    margin: 15px auto 0
 
   a
     text-decoration: none
@@ -35,12 +35,12 @@
     vertical-align: baseline
     width: 200px
     display: block
-    margin: 20px auto
+    margin: 40px auto 0
 
     @media (min-width: 768px)
       width: 160px
       display: inline-block
-      margin: 20px 12px 0 0
+      margin: 40px 0 0
 
   .breadcrumb
     background: none
